<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView"/>
    <TextView
            android:text="@string/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/nameTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <TextView
            android:text="@string/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleTextView" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/nameTextView"/>
    <TextView
            android:text="@string/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/phoneTextView" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/titleTextView"/>
    <TextView
            android:text="@string/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/emailTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneTextView" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/departmentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/departmentTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView6" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/departmentTextView" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" android:textSize="14sp" app:layout_constraintVertical_bias="0.026"/>
</android.support.constraint.ConstraintLayout>